# codiiy

./: .gitignore  manage.sh  readme.md  requirements.txt
.cursor/refrence/: 效率提升.md  模型基座.md
.cursor/refrence/skills/agentskills-main/skills-ref/: CLAUDE.md  pyproject.toml
.cursor/refrence/skills/agentskills-main/skills-ref/src/skills_ref/: __init__.py  parser.py
.cursor/rules/: rules-design-dir-agents.md  rules-develop.md  rules-dr.md  rules-or.md  rules-test-design.md  rules-test.md  rules-workflow.md
adapter/: __init__.py  base.py  http_adapter.py  process_adapter.py  registry.py  types.py
adapter/cursor_local/: __init__.py  adapter.py  parser.py
agents/: __init__.py  manager.py
agents/helm/: README.md  __init__.py
agents/mindforge/: AGENTS.md  README.md  __init__.py  strategy_base.py  strategy_factory.py
agents/skills/: AGENTS.md  __init__.py
component/: AGENTS.md  README.json  __init__.py  component_index.json  component_manager.py  component_state.json  invoke.py  manager.py
component/communicate/: README.json  __init__.py  _config.py  _http.py
component/decide/: README.json  __init__.py
component/handle/: README.json  __init__.py
component/observe/: README.json  __init__.py
core/: db.sqlite3  interaction_payload.json  manage.py  manage.sh  requirements.txt  rules.md
core/code/: manage.py  requirements.txt
data/: .gitignore  README.md
framework/: __init__.py  capability_dispatcher.py
test/: AGENTS.md  __init__.py
tools/: AGENTS.md  WECHAT_TOOL_README.md  manager.py  toolset_source.json  toolset_state.json  wechat_sender.py
(+389 files in other folders)
