[project]
name = "skills-ref"
version = "0.1.0"
description = "Reference library for Agent Skills"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Keith Lazuka", email = "klazuka@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "strictyaml>=1.7.3",
]

[project.scripts]
skills-ref = "skills_ref.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_ref"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]
